[tool.poetry]
name = "fah-control-2020"
version = "0.1.0"
description = "A rehauled Folding@Home controller based on the legacy one at https://github.com/FoldingAtHome/fah-control"
authors = ["Henrik Lindgren <henriklindgren@users.noreply.github.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
PySimpleGUI = "^4.18.2"
pydantic = "^1.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
